[gd_scene load_steps=3 format=3 uid="uid://dl7rbhxrqviv4"]

[ext_resource type="PackedScene" uid="uid://by4heqm1es1ey" path="res://scene/card.tscn" id="1_p36j5"]
[ext_resource type="Script" path="res://scene/game_scene.gd" id="1_qjd2r"]

[node name="gameScene" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(450, 400)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -190.0
offset_right = 606.0
offset_bottom = 210.0
grow_vertical = 2
script = ExtResource("1_qjd2r")

[node name="GameStartScreen" type="Control" parent="."]
top_level = true
anchors_preset = 0
offset_right = 589.0
offset_bottom = 386.0

[node name="GameStartLabel" type="Label" parent="GameStartScreen"]
top_level = true
layout_mode = 0
offset_left = 256.0
offset_top = 76.0
offset_right = 377.0
offset_bottom = 99.0
text = "MEMORY GAME"
horizontal_alignment = 1

[node name="StartGameButton" type="Button" parent="GameStartScreen"]
layout_mode = 0
offset_left = 129.0
offset_top = 259.0
offset_right = 494.0
offset_bottom = 356.0
text = "START GAME"

[node name="ColorRect" type="ColorRect" parent="GameStartScreen"]
show_behind_parent = true
layout_mode = 0
offset_right = 597.0
offset_bottom = 390.0
color = Color(0.164883, 0.682993, 0.898871, 1)

[node name="GameOverScreen" type="Control" parent="."]
top_level = true
anchors_preset = 0
offset_right = 77.0
offset_bottom = 77.0

[node name="GameOverLabel" type="Label" parent="GameOverScreen"]
layout_mode = 0
offset_left = 185.0
offset_top = 124.0
offset_right = 445.0
offset_bottom = 263.0
text = "GAME OVER"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="GameOverScreen"]
layout_mode = 0
offset_left = 203.0
offset_top = 224.0
offset_right = 447.0
offset_bottom = 309.0
text = "TRY AGAIN
"

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 14.65
anchor_bottom = 9.75
offset_left = -3.0
offset_top = -3.0
offset_right = -522.0
offset_bottom = -331.0
color = Color(0.854837, 0.408646, 0.457778, 1)

[node name="CardGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(450, 400)
layout_mode = 1
offset_right = 450.0
offset_bottom = 400.0
columns = 4

[node name="Card" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card2" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card3" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card4" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card5" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card6" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card7" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card8" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card9" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card10" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card11" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="Card12" parent="CardGrid" instance=ExtResource("1_p36j5")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 301.0
offset_right = 579.0
offset_bottom = 359.0
text = "PLAY AGAIN
"

[node name="GameTimer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 124.0
offset_right = 521.0
offset_bottom = 167.0
text = "TIME: 0"

[node name="RoundNumLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 160.0
offset_right = 508.0
offset_bottom = 197.0
text = "ROUND : 1"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 76.0
offset_right = 496.0
offset_bottom = 99.0
text = "SCORE : 0"
